2008-11-23 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.24.3

2008-11-23 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: prepare for 2.24.2 release.

2008-10-29  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c:(accessibility_enabled): Remove check for GNOME
	a11y gconf key. Fixes startup in GDM.

2008-10-20 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.24.2

2008-10-20 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: prepare for 2.24.1 release.

2008-10-20 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.24.1

2008-09-22 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.24.0 release.

2008-09-12  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-cursor-manager.c: Remove cursor_set guard. Seems to get
	out of sync when grabs are involved.

2008-09-11  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/dwell-click-applet.glade: Mark tooltip for translation and
	change capitalization. Bug #551762.

2008-09-08 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.24.0

2008-09-08 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.92 release.

2008-09-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-service.c: Fix StatusChanged signal emission.

2008-09-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Cleanup.

2008-09-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: (mt_main_generate_button_event): Fix typo that
	caused double clicks not to work.
	(mt_main_do_dwell_click)(dwell_timer_finished): Improve drag click
	handling. (mt_main_generate_motion_event): Add error trap

2008-09-06  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.glade: Mark modifier labels
	for translation.

	Patch by Milo Casagrande. Fixes bug #551133.
