@@ -1,3 +1,9 @@
+2008-11-27  Gerd Kohlberger  <gerdk@svn.gnome.org>
+
+	* src/mt-main.c: (global_motion_event): Make sure drag-clicks also
+	work if both Dwell Click and Simulated Secondary Click are enabled.
+	Fixes bug #562212.
+
 2008-11-23 Francesco Fumanti <frfumanti@svn.gnome.org>
 
 	* configure.ac:
